--- a/public/css/main.css
+++ b/public/css/main.css
@@ -208,34 +208,199 @@
 
 .services-wrap {
   width: 100%;
-  height: 50vh;
-  background: url("/assets/images/road2.jpg");
-  background-size: cover;
-  background-position: center;
+  height: 55vh;
+  background: linear-gradient(55deg, rgba(255, 255, 255, 0.94) 46%, rgba(12, 95, 99, 0.58) 100%), url(/assets/images/road.jpg);
+  background-position: 0% 82%;
+  background-attachment: fixed;
 }
 .services-wrap .services {
   margin: 0 auto;
   max-width: 70vw;
   margin: 0 auto;
-  max-width: 50vw;
+  flex: 0 1 50%;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   justify-content: center;
-  align-items: center;
   height: 100%;
 }
 .services-wrap .services .btn-transparent {
-  border: 1px solid white;
+  border: 0.15rem solid #337a94;
+  color: #337a94;
+}
+.services-wrap .services .btn-transparent:hover {
+  background: #337a94;
+}
+.services-wrap .services .btn-transparent:hover span {
+  color: #0f0f0f;
+}
+.services-wrap .services .btn-transparent .btn-text {
+  color: #337a94;
 }
 .services-wrap .services .services-text {
   margin-bottom: 2rem;
+  color: #0f0f0f;
 }
 .services-wrap .services .services-title {
   color: #efefef;
   font-family: "Bebas Neue", cursive;
   text-align: center;
+  color: #337a94;
+  font-size: 5.5rem;
+}
+
+.work-wrap {
+  background: white;
+}
+.work-wrap .work-content {
+  max-width: 70vw;
+  margin: 0 auto;
+  height: 105vh;
+}
+.work-wrap .work-content .work-overtitle {
+  color: #0f0f0f;
+  font-size: 1.2rem;
+  display: block;
+  text-align: center;
+}
+.work-wrap .work-content .work-title {
+  color: #337a94;
+  font-family: "Bebas Neue", cursive;
+  text-align: center;
+  padding-top: 8rem;
   font-size: 5rem;
-  text-shadow: 0px 0px 10px #0f0f0f;
+}
+.work-wrap .work-content .work-cards {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60vh;
+  margin-top: 6rem;
+}
+.work-wrap .work-content .work-cards .work-card {
+  flex: 0 1 calc(50% - 1rem);
+  height: 100%;
+  padding: 3.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: start;
+}
+.work-wrap .work-content .work-cards .work-card .btn-transparent {
+  background: transparent;
+  border: 1px solid white;
+  outline: none;
+}
+.work-wrap .work-content .work-cards .work-card .btn-transparent:hover {
+  background: white;
+}
+.work-wrap .work-content .work-cards .work-card .btn-transparent:hover span {
+  color: #0f0f0f;
+}
+.work-wrap .work-content .work-cards .work-card .card-title {
+  z-index: 10;
+  text-shadow: 0 0 8px black;
+  font-size: 2.6rem;
+}
+.work-wrap .work-content .work-cards .work-card .card-text {
+  margin: 1.5rem 0;
+  z-index: 10;
+  text-shadow: 0 0 8px black;
+}
+.work-wrap .work-content .work-cards .driver {
+  position: relative;
+  overflow: hidden;
+  transition: all 0.2s ease;
+}
+.work-wrap .work-content .work-cards .driver:hover {
+  box-shadow: 5px 5px 10px black;
+  transform: translateY(-1rem);
+}
+.work-wrap .work-content .work-cards .driver:hover .bg-effect-driver {
+  filter: none;
+  box-shadow: 0px 0px 5px black;
+}
+.work-wrap .work-content .work-cards .driver .bg-effect-driver {
+  background: url("/assets/images/road2.jpg");
+  background-size: cover;
+  -moz-filter: blur(13px);
+  -o-filter: blur(13px);
+  -ms-filter: blur(13px);
+  filter: blur(2px) grayscale(0.3);
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+.work-wrap .work-content .work-cards .operator {
+  overflow: hidden;
+  position: relative;
+  transition: all 0.2s ease;
+}
+.work-wrap .work-content .work-cards .operator:hover {
+  box-shadow: 5px 5px 10px black;
+  transform: translateY(-1rem);
+}
+.work-wrap .work-content .work-cards .operator:hover .bg-effect-operator {
+  box-shadow: 0px 0px 5px black;
+  filter: none;
+}
+.work-wrap .work-content .work-cards .operator .bg-effect-operator {
+  background: url("/assets/images/operater.jpeg");
+  background-size: cover;
+  -moz-filter: blur(13px);
+  -o-filter: blur(13px);
+  -ms-filter: blur(13px);
+  filter: blur(2px) grayscale(0.3);
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  transition: all 0.2s ease;
+}
+
+.cta-careers-wrap {
+  width: 100%;
+  height: 55vh;
+  background: linear-gradient(55deg, rgba(255, 255, 255, 0.94) 46%, rgba(12, 95, 99, 0.58) 100%), url("/assets/images/trucking.jpg");
+  background-position: 85% 92%;
+}
+.cta-careers-wrap .cta-careers {
+  margin: 0 auto;
+  max-width: 70vw;
+  margin: 0 auto;
+  flex: 0 1 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  height: 100%;
+}
+.cta-careers-wrap .cta-careers .btn-transparent {
+  border: 0.15rem solid #337a94;
+  color: #337a94;
+}
+.cta-careers-wrap .cta-careers .btn-transparent:hover {
+  background: #337a94;
+}
+.cta-careers-wrap .cta-careers .btn-transparent:hover span {
+  color: #0f0f0f;
+}
+.cta-careers-wrap .cta-careers .btn-transparent .btn-text {
+  color: #337a94;
+}
+.cta-careers-wrap .cta-careers .cta-careers-text {
+  margin-bottom: 2rem;
+  color: #0f0f0f;
+}
+.cta-careers-wrap .cta-careers .cta-careers-title {
+  color: #efefef;
+  font-family: "Bebas Neue", cursive;
+  text-align: center;
+  color: #337a94;
+  font-size: 5.5rem;
 }
 
 .cta-wrap {
@@ -246,6 +411,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  flex-direction: row-reverse;
 }
 @media (max-width: 426px) {
   .cta-wrap .cta-content {
@@ -256,7 +422,7 @@
   flex: 0 1 58%;
   background: white;
   height: 100%;
-  padding: 4rem 4rem 4rem 18rem;
+  padding: 4rem 17rem 4rem 8rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -284,13 +450,14 @@
   width: 15rem;
 }
 .cta-wrap .cta-content .cta-left .cta-subtitle {
-  color: #67bdcc;
+  color: #0f0f0f;
 }
 .cta-wrap .cta-content .cta-left .cta-title {
   color: #337a94;
   font-size: 5.5rem;
   font-family: "Bebas Neue", cursive;
   padding-top: 1rem;
+  line-height: 5rem;
 }
 .cta-wrap .cta-content .cta-right {
   flex: 0 1 42%;
@@ -334,154 +501,111 @@
   filter: drop-shadow(0px 0 2px black);
 }
 
-.work-wrap {
-  background: white;
+.testimonials-wrap {
+  background: linear-gradient(55deg, rgba(255, 255, 255, 0) 46%, rgba(12, 95, 99, 0.48) 100%), url(/assets/images/trucking.jpg);
+  background-position: 0% 82%;
+  margin-top: 4rem;
+  padding: 7rem 0;
+  background-attachment: fixed;
 }
-.work-wrap .work-content {
+.testimonials-wrap .testimonials-content {
   max-width: 100%;
   margin: 0 auto;
 }
-.work-wrap .work-content .work-overtitle {
-  color: #337a94;
+.testimonials-wrap .testimonials-content .testimonials-overtitle {
+  color: #0f0f0f;
   font-size: 1.2rem;
   display: block;
   text-align: center;
 }
-.work-wrap .work-content .work-title {
-  color: #efefef;
+.testimonials-wrap .testimonials-content .testimonials-title {
+  color: #337a94;
   font-family: "Bebas Neue", cursive;
   text-align: center;
   font-size: 5rem;
-  text-shadow: 0px 0px 10px #0f0f0f;
 }
-.work-wrap .work-background .work-list {
-  margin: 0 auto;
+.testimonials-wrap .testimonials-background {
+  height: 400px;
   max-width: 70vw;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin-top: 5rem;
 }
-.work-wrap .work-background .work-list .main-carousel {
+.testimonials-wrap .testimonials-background .testimonials-info {
+  flex: 0 1 calc(40% - 1rem);
+  background: #67bdcc;
+  height: 100%;
+  padding: 3.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: start;
+}
+.testimonials-wrap .testimonials-background .testimonials-info .testimonials-info-text {
+  margin: 1.5rem 0;
+}
+.testimonials-wrap .testimonials-background .testimonials-list {
+  max-width: 70vw;
+  flex: 0 1 calc(60% - 1rem);
+  background: #21546e;
+  height: 100%;
+  padding: 0 3.5rem 3.5rem 3.5rem;
+}
+.testimonials-wrap .testimonials-background .testimonials-list .main-carousel {
   height: 350px;
   /* position dots up a bit */
   /* dots are lines */
 }
-.work-wrap .work-background .work-list .main-carousel .flicity-viewport {
+.testimonials-wrap .testimonials-background .testimonials-list .main-carousel .flicity-viewport {
   height: 100%;
 }
-.work-wrap .work-background .work-list .main-carousel .carousel-cell {
-  background: red;
-  width: 33%;
+.testimonials-wrap .testimonials-background .testimonials-list .main-carousel .carousel-cell {
+  width: 100%;
   height: 200px;
   margin-right: 10px;
 }
 @media (max-width: 426px) {
-  .work-wrap .work-background .work-list .main-carousel .carousel-cell .carousel-cell {
+  .testimonials-wrap .testimonials-background .testimonials-list .main-carousel .carousel-cell .carousel-cell {
     width: 100%;
   }
 }
-.work-wrap .work-background .work-list .main-carousel .carousel-cell .artist-image {
+.testimonials-wrap .testimonials-background .testimonials-list .main-carousel .carousel-cell .testimonials-image {
   width: 100%;
   height: 300px;
   background-size: cover;
+  display: flex;
   background-position: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-.work-wrap .work-background .work-list .main-carousel .carousel-cell .ai1 {
-  background: url("http://templatekit.krakenbox.net/blankink/wp-content/uploads/sites/4/elementor/thumbs/s13-owjxjw2uh7q52vcn3cvlt225b29bad76ox6rw2bzw0.jpg") top/cover;
+.testimonials-wrap .testimonials-background .testimonials-list .main-carousel .carousel-cell .testimonials-image .testimonials-info-text {
+  margin-top: 1.5rem;
 }
-.work-wrap .work-background .work-list .main-carousel .carousel-cell .ai2 {
-  background: url("http://templatekit.krakenbox.net/blankink/wp-content/uploads/sites/4/elementor/thumbs/s12-owjxjrdnj1jpgtjgusugyl8uc4wh7voj09xchoiyr4.jpg") top/cover;
+.testimonials-wrap .testimonials-background .testimonials-list .main-carousel .carousel-cell .testimonials-info {
+  display: block;
+  color: #0f0f0f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
-.work-wrap .work-background .work-list .main-carousel .carousel-cell .ai3 {
-  background: url("http://templatekit.krakenbox.net/blankink/wp-content/uploads/sites/4/elementor/thumbs/s4-owjxik52snwimra9va5mrw5n0etldswvibx0eyb2pc.jpg") center/cover;
-}
-.work-wrap .work-background .work-list .main-carousel .carousel-cell .ai4 {
-  background: url("http://templatekit.krakenbox.net/blankink/wp-content/uploads/sites/4/elementor/thumbs/s11-owjxjmogkvd9urqam8tc44fjd7jn5e5vbmnx3apxm8.jpg") center/cover;
-}
-.work-wrap .work-background .work-list .main-carousel .carousel-cell .artist-info {
-  display: none;
-}
-.work-wrap .work-background .work-list .main-carousel .carousel-cell .artist-name {
+.testimonials-wrap .testimonials-background .testimonials-list .main-carousel .carousel-cell .testimonials-name {
   text-align: center;
   font-family: "Bebas Neue", cursive;
   text-shadow: 0px 0px 5px black;
   color: #337a94;
 }
-.work-wrap .work-background .work-list .main-carousel .flickity-page-dots {
-  bottom: -22px;
+.testimonials-wrap .testimonials-background .testimonials-list .main-carousel .flickity-page-dots {
+  bottom: 0px;
 }
-.work-wrap .work-background .work-list .main-carousel .flickity-page-dots .dot {
+.testimonials-wrap .testimonials-background .testimonials-list .main-carousel .flickity-page-dots .dot {
   height: 4px;
   width: 40px;
   margin: 0;
   border-radius: 0;
-}
-
-.contact-wrap {
-  position: relative;
-}
-.contact-wrap .contact {
-  position: absolute;
-  z-index: 999;
-  top: -45px;
-  left: 10px;
-  height: 76vh;
-  padding: 2rem 4rem 0rem;
-  width: 40%;
-  box-shadow: 0px 0px 5px #0f0f0f;
-  background: url("/assets/images/slider1.jpg");
-  background-size: cover;
-}
-@media (max-width: 426px) {
-  .contact-wrap .contact {
-    position: unset;
-    width: 100%;
-  }
-}
-.contact-wrap .contact .contact-title {
-  color: #efefef;
-  font-family: "Bebas Neue", cursive;
-  line-height: 3.5rem;
-  text-align: center;
-  font-size: 5rem;
-  text-shadow: 0px 0px 10px #0f0f0f;
-}
-.contact-wrap .contact .contact-info-wrap {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 1.5rem;
-  align-items: center;
-}
-@media (max-width: 1024px) {
-  .contact-wrap .contact .contact-info-wrap {
-    flex-direction: column;
-  }
-}
-.contact-wrap .contact .contact-info-wrap .info {
-  background: #000000c4;
-  box-shadow: 0px 0px 5px #0f0f0f;
-  padding: 0.7rem 2.5rem;
-  flex: 0 1 calc(50% - 1rem);
-}
-@media (max-width: 1024px) {
-  .contact-wrap .contact .contact-info-wrap .info {
-    width: 100%;
-    margin-top: 0.5rem;
-  }
-}
-.contact-wrap .contact .contact-info-wrap .info .info-title {
-  font-size: 1.2rem;
-}
-.contact-wrap .contact .contact-form .form {
-  display: flex;
-  margin-top: 4.5rem;
-  flex-direction: column;
-}
-.contact-wrap .contact .contact-form .form .input,
-.contact-wrap .contact .contact-form .form .textarea {
-  padding: 0.5rem 1.5rem;
-  outline: none;
-  border: none;
-  margin-top: 0.2rem;
-  background: #0e0e0ec9;
 }
 
 .footer-wrap {
@@ -720,225 +844,6 @@
   text-transform: uppercase;
 }
 .about-content-wrap .about-content .about-pricing td {
-  padding: 15px;
-  text-align: left;
-  vertical-align: middle;
-  font-weight: 300;
-  font-size: 1rem;
-  color: #fff;
-  border-bottom: solid 1px rgba(255, 255, 255, 0.1);
-}
-
-.header-contact {
-  height: 60vh;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 100% 80%, 50% 90%, 0 80%, 0 0);
-  clip-path: polygon(0 0, 100% 0, 100% 0, 100% 85%, 50% 95%, 0 85%, 0 0);
-  background-image: linear-gradient(to right bottom, rgba(36, 36, 36, 0.9), rgba(0, 0, 0, 0.17)), url("/assets/images/contact-background.jpg");
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.header-contact .navigation-list {
-  text-shadow: 0px 0px 5px #0f0f0f;
-  width: 70vw;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  list-style-type: none;
-  height: 20vh;
-  margin: 0 auto;
-  color: #efefef;
-}
-.header-contact .navigation-list .navigation-item {
-  font-size: 1.2rem;
-}
-.header-contact .navigation-list .navigation-item a {
-  text-decoration: none;
-}
-.header-contact .navigation-list .navigation-item .navigation-item-logo {
-  width: 200px;
-  filter: invert(100%);
-}
-@media (max-width: 426px) {
-  .header-contact .navigation-list {
-    display: none;
-  }
-}
-.header-contact .navigation-mobile {
-  display: none;
-}
-@media (max-width: 426px) {
-  .header-contact .navigation-mobile {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1.5rem;
-    position: fixed;
-    width: 100vw;
-    z-index: 9999;
-  }
-  .header-contact .navigation-mobile .navigation-mobile-logo {
-    width: 100px;
-    filter: invert(100%);
-  }
-  .header-contact .navigation-mobile .navigation-hamburger {
-    font-size: 2rem;
-  }
-}
-.header-contact .navigation-mobile-list {
-  display: none;
-}
-@media (max-width: 426px) {
-  .header-contact .navigation-mobile-list {
-    background: red;
-    position: absolute;
-    width: 100%;
-    height: 0;
-    padding: 1.5rem;
-    list-style-type: none;
-    font-size: 1.1rem;
-    z-index: 999;
-    transition: all 0.3s linear;
-  }
-}
-.header-contact .contact-title {
-  margin-top: 5rem;
-  font-size: 2.2rem;
-  text-shadow: 0px 0px 5px #0f0f0f;
-}
-
-.contact-content-wrap .contact-content {
-  max-width: 70vw;
-  margin: 0 auto;
-}
-.contact-content-wrap .contact-content .contact-overtitle {
-  color: #337a94;
-  font-size: 1.2rem;
-  display: block;
-  padding-top: 3rem;
-  text-align: center;
-}
-.contact-content-wrap .contact-content .contact-title {
-  color: #efefef;
-  font-family: "Bebas Neue", cursive;
-  line-height: 3.5rem;
-  text-align: center;
-  font-size: 5rem;
-  text-shadow: 0px 0px 10px #0f0f0f;
-}
-.contact-content-wrap .contact-content .contact-title-advice {
-  color: #efefef;
-  font-family: "Bebas Neue", cursive;
-  line-height: 3.5rem;
-  text-align: center;
-  font-size: 5rem;
-  margin-top: 9rem;
-  text-shadow: 0px 0px 10px #0f0f0f;
-}
-.contact-content-wrap .contact-content .contact-text {
-  margin-top: 2rem;
-  text-align: center;
-}
-.contact-content-wrap .contact-content .description-wrap {
-  margin-top: 2.5rem;
-  display: flex;
-  justify-content: space-between;
-}
-.contact-content-wrap .contact-content .description-wrap .description {
-  flex: 0 1 calc(50% - 1rem);
-}
-.contact-content-wrap .contact-content .process-wrap {
-  margin-top: 3rem;
-}
-.contact-content-wrap .contact-content .process-wrap .process-overtitle {
-  color: #337a94;
-  font-size: 1rem;
-  display: block;
-  padding-top: 3rem;
-  text-align: center;
-}
-.contact-content-wrap .contact-content .process-wrap .process-title {
-  color: #efefef;
-  font-family: "Bebas Neue", cursive;
-  line-height: 3.2rem;
-  text-align: center;
-  font-size: 4rem;
-  text-shadow: 0px 0px 10px #0f0f0f;
-}
-.contact-content-wrap .contact-content .process-wrap .process-container {
-  margin-top: 2rem;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-.contact-content-wrap .contact-content .process-wrap .process-container .process-single {
-  flex: 0 1 calc(50% - 1rem);
-  background: #27272778;
-  padding: 2rem;
-  position: relative;
-  border-radius: 2px;
-  text-align: center;
-  margin-top: 1rem;
-}
-.contact-content-wrap .contact-content .process-wrap .process-container .process-single .process-single-icon {
-  width: 100px;
-  filter: drop-shadow(0px 0px 3px #0f0f0f) saturate(0.9);
-}
-.contact-content-wrap .contact-content .contact-pricing {
-  margin-top: 5rem;
-  position: relative;
-  overflow: hidden;
-}
-.contact-content-wrap .contact-content .contact-pricing .bg-effect {
-  background: url("/assets/images/contact1.jpg");
-  background-size: cover;
-  -moz-filter: blur(13px);
-  -o-filter: blur(13px);
-  -ms-filter: blur(13px);
-  filter: blur(2px) brightness(0.3) opacity(0.7);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-.contact-content-wrap .contact-content .contact-pricing table {
-  width: 100%;
-  table-layout: fixed;
-}
-.contact-content-wrap .contact-content .contact-pricing .tbl-header {
-  background-color: #27272778;
-  color: blue;
-  font-size: 50px;
-  font-weight: bold;
-  position: relative;
-  z-index: 9999;
-  -moz-filter: blur(0px);
-  -o-filter: blur(0px);
-  -ms-filter: blur(13px);
-  filter: blur(0px);
-}
-.contact-content-wrap .contact-content .contact-pricing .tbl-content {
-  margin-top: 0px;
-  border: none;
-  color: blue;
-  font-size: 50px;
-  font-weight: bold;
-  position: relative;
-  z-index: 9999;
-  -moz-filter: blur(0px);
-  -o-filter: blur(0px);
-  -ms-filter: blur(13px);
-  filter: blur(0px);
-}
-.contact-content-wrap .contact-content .contact-pricing th {
-  padding: 20px 15px;
-  text-align: left;
-  font-weight: 500;
-  font-size: 1rem;
-  color: #fff;
-  text-transform: uppercase;
-}
-.contact-content-wrap .contact-content .contact-pricing td {
   padding: 15px;
   text-align: left;
   vertical-align: middle;
@@ -1352,10 +1257,6 @@ html {
     font-size: 12px;
   }
 }
-body {
-  background: #0f0f0f;
-}
-
 #map {
   width: 100%;
   height: 65vh;
@@ -1444,4 +1345,16 @@ body {
   text-transform: uppercase;
   font-size: 1rem;
   font-weight: bold;
+}
+
+.underline {
+  height: 0.3rem;
+  background: #f06037c4;
+  width: 8rem;
+  border: none;
+  margin-bottom: 1.5rem;
+}
+
+.center {
+  margin: 0 auto;
 }
