--- a/resources/sass/pages/homepage/services.scss
+++ b/resources/sass/pages/homepage/services.scss
@@ -1,35 +1,49 @@
 .services-wrap {
     width: 100%;
-    height: 50vh;
-    background: url('/assets/images/road2.jpg');
-    background-size: cover;
-    background-position: center;
+    height: 55vh;
+   background: linear-gradient(55deg, rgb(255 255 255 / 94%) 46%, rgb(12 95 99 / 58%) 100%),
+   url(/assets/images/road.jpg);
+   background-position: 0% 82%;
+   background-attachment: fixed;
 
     .services {
         @include center-content();
         margin: 0 auto;
-        max-width: 50vw;
+        flex: 0 1 50%;
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
         justify-content: center;
-        align-items: center;
         height: 100%;
 
         .btn-transparent {
-            border: 1px solid white;
+            border: 0.15rem solid $blue;
+            color: $blue;
+
+            &:hover {
+                background: $blue;
+
+                span {
+                    color: $dark-black;
+                }
+            }
+
+            .btn-text {
+                color: $blue;
+            }
         }
         
         .services-text {
             margin-bottom: 2rem;
-
+            color: $dark-black;
         }
 
         .services-title {
             color: $text-white;
             font-family: $styled-text;
             text-align: center;
-            font-size: 5rem;
-            text-shadow: 0px 0px 10px $dark-black;
+            color: $blue;
+            font-size: 5.5rem;
         }
     }
 }
