--- a/resources/sass/pages/homepage/work.scss
+++ b/resources/sass/pages/homepage/work.scss
@@ -2,99 +2,118 @@
     background: white;
 
     .work-content {
-        max-width: 100%;
+        max-width: 70vw;
         margin: 0 auto;
+        height: 105vh;
 
         .work-overtitle {
-            color: $blue;
+            color: $dark-black;
             font-size: 1.2rem;
             display: block;
             text-align: center;
         }
 
         .work-title {
-            color: $text-white;
+            color: $blue;
             font-family: $styled-text;
             text-align: center;
+            padding-top: 8rem;
             font-size: 5rem;
-            text-shadow: 0px 0px 10px $dark-black;
         }
-    }
 
-    .work-background {
+        .work-cards {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 60vh;
+            margin-top: 6rem;
 
-        .work-list {
-            @include center-content();
-            margin-top: 5rem;
+            .work-card {
+                flex: 0 1 calc(50% - 1rem);
+                height: 100%;
+                padding: 3.5rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-end;
+                align-items: start;
 
-            .main-carousel {
-                height: 350px;
-
-                .flicity-viewport {
-                    height: 100%;
+                .btn-transparent {
+                    @include btn-transparent();
                 }
 
-                .carousel-cell {
-                    background: red;
-                    width: 33%;
-                    height: 200px;
-                    margin-right: 10px;
-
-                    @include mobile {
-                        .carousel-cell {
-                            width: 100%;
-                        }
-                    }
-
-                    .artist-image {
-                        width: 100%;
-                        height: 300px;
-                        background-size: cover;
-                        background-position: center;
-                    }
-
-                    .ai1 {
-                        background: url('http://templatekit.krakenbox.net/blankink/wp-content/uploads/sites/4/elementor/thumbs/s13-owjxjw2uh7q52vcn3cvlt225b29bad76ox6rw2bzw0.jpg') top/cover;
-                    }
-
-                    .ai2 {
-                        background: url('http://templatekit.krakenbox.net/blankink/wp-content/uploads/sites/4/elementor/thumbs/s12-owjxjrdnj1jpgtjgusugyl8uc4wh7voj09xchoiyr4.jpg') top/cover;
-                    }
-
-                    .ai3 {
-                        background: url('http://templatekit.krakenbox.net/blankink/wp-content/uploads/sites/4/elementor/thumbs/s4-owjxik52snwimra9va5mrw5n0etldswvibx0eyb2pc.jpg') center/cover;
-                    }
-
-                    .ai4 {
-                        background: url('http://templatekit.krakenbox.net/blankink/wp-content/uploads/sites/4/elementor/thumbs/s11-owjxjmogkvd9urqam8tc44fjd7jn5e5vbmnx3apxm8.jpg') center/cover;
-                    }
-
-                    .artist-info {
-                        display: none;
-                    }
-
-                    .artist-name {
-                        text-align: center;
-                        font-family: $styled-text;
-                        text-shadow: 0px 0px 5px black;
-                        color: $blue;
-                    }
+                .card-title {
+                    z-index: 10;
+                    text-shadow: 0 0 8px black;
+                    font-size: 2.6rem;
                 }
 
-                /* position dots up a bit */
-                .flickity-page-dots {
-                    bottom: -22px;
-                }
-
-                /* dots are lines */
-                .flickity-page-dots .dot {
-                    height: 4px;
-                    width: 40px;
-                    margin: 0;
-                    border-radius: 0;
+                .card-text {
+                    margin: 1.5rem 0;
+                    z-index: 10;
+                    text-shadow: 0 0 8px black;
                 }
             }
 
+            .driver {
+                position: relative;
+                overflow: hidden;
+                transition: all 0.2s ease;
+
+                &:hover {
+                    box-shadow: 5px 5px 10px black;
+                    transform: translateY(-1rem);
+
+                    .bg-effect-driver {
+                        filter: none;
+                        box-shadow: 0px 0px 5px black;
+                    }
+                }
+
+                 .bg-effect-driver {
+                     background: url('/assets/images/road2.jpg');
+                     background-size: cover;
+                     -moz-filter: blur(13px);
+                     -o-filter: blur(13px);
+                     -ms-filter: blur(13px);
+                     filter: blur(2px) grayscale(0.3);
+                     position: absolute;
+                     top: 0;
+                     left: 0;
+                     bottom: 0;
+                     right: 0;
+                 }
+            }
+
+            .operator {
+                overflow: hidden;
+                position: relative;
+                transition: all 0.2s ease;
+
+                &:hover {
+                    box-shadow: 5px 5px 10px black;
+                    transform: translateY(-1rem);
+
+                    .bg-effect-operator {
+                        box-shadow: 0px 0px 5px black;
+                        filter: none;
+                    }
+                }                
+
+                .bg-effect-operator {
+                    background: url('/assets/images/operater.jpeg');
+                    background-size: cover;
+                    -moz-filter: blur(13px);
+                    -o-filter: blur(13px);
+                    -ms-filter: blur(13px);
+                    filter: blur(2px) grayscale(0.3);
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    bottom: 0;
+                    right: 0;
+                    transition: all 0.2s ease;
+                }
+            }
 
         }
     }
