--- a/resources/sass/pages/homepage/testimonials.scss
+++ b/resources/sass/pages/homepage/testimonials.scss
@@ -1,17 +1,29 @@
 .testimonials-wrap {
-    background: linear-gradient(55deg, rgb(255 255 255 / 0%) 46%, rgb(12 95 99 / 48%) 100%),
-    url(/assets/images/trucking.jpg);
     background-position: 0% 82%;
     margin-top: 4rem;
-    padding: 7rem 0;
-    background-attachment: fixed;
+    position: relative;
+    overflow: hidden;
+
+    .bg-effect {
+        background: url('/assets/images/night-road.jpg');
+        background-size: cover;
+        background-attachment: fixed;
+        -moz-filter: blur(13px);
+        -o-filter: blur(13px);
+        -ms-filter: blur(13px);
+        filter: grayscale(0.5) brightness(1.5) saturate(1.5);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
 
     .testimonials-content {
         max-width: 100%;
         margin: 0 auto;
+        filter: opacity(1);
 
         .testimonials-overtitle {
-            color: $dark-black;
+            color: $text-white;
             font-size: 1.2rem;
             display: block;
             text-align: center;
@@ -22,10 +34,12 @@
             font-family: $styled-text;
             text-align: center;
             font-size: 5rem;
+            padding-top: 5rem;
         }
     }
 
     .testimonials-background {
+        filter: opacity(1);
         height: 400px;
         max-width: 70vw;
         margin: 0 auto;
@@ -33,19 +47,28 @@
         justify-content: space-between;
         align-items: center;
         margin-top: 5rem;
+        margin-bottom: 7rem;
 
         .testimonials-info {
             flex: 0 1 calc(40% - 1rem);
-            background: $lightBlue;
             height: 100%;
             padding: 3.5rem;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
             align-items: start;
+            background: linear-gradient(55deg, rgb(255 255 255 / 16%) 32%, rgb(208 87 15) 100%),
+            url('/assets/images/road.jpg');
+            background-position: 0% 112%;
+            background-attachment: fixed;
 
             .testimonials-info-text {
                 margin: 1.5rem 0;
+                text-shadow: 0 0 8px black;
+            }
+
+            .testimonials-info-title {
+                text-shadow: 0 0 8px black;
             }
         }
 
@@ -106,7 +129,6 @@
                         text-align: center;
                         font-family: $styled-text;
                         text-shadow: 0px 0px 5px black;
-                        color: $blue;
                     }
                 }
 
@@ -120,6 +142,7 @@
                     height: 4px;
                     width: 40px;
                     margin: 0;
+                    background: #c25638;
                     border-radius: 0;
                 }
             }
