--- a/resources/sass/pages/homepage/testimonials.scss
+++ b/resources/sass/pages/homepage/testimonials.scss
@@ -48,6 +48,12 @@
         align-items: center;
         margin-top: 5rem;
         margin-bottom: 7rem;
+        background-size: cover;
+
+        @include mobile() {
+            flex-direction: column;
+            height: auto;
+        }
 
         .testimonials-info {
             flex: 0 1 calc(40% - 1rem);
@@ -61,6 +67,7 @@
             url('/assets/images/road.jpg');
             background-position: 0% 112%;
             background-attachment: fixed;
+            background-size: cover;
 
             .testimonials-info-text {
                 margin: 1.5rem 0;
@@ -78,6 +85,11 @@
             background: $darkBlue;
             height: 100%;
             padding: 0 3.5rem 3.5rem 3.5rem;
+            
+            @include mobile() {
+                width: 100%;
+                max-width: none;
+            }
 
             .main-carousel {
                 height: 350px;
