--- a/public/css/main.css
+++ b/public/css/main.css
@@ -289,7 +289,11 @@
   align-items: center;
   height: 60vh;
   margin-top: 6rem;
-  flex-direction: column;
+}
+@media (max-width: 768px) {
+  .work-wrap .work-content .work-cards {
+    flex-direction: column;
+  }
 }
 .work-wrap .work-content .work-cards .work-card {
   flex: 0 1 calc(50% - 1rem);
@@ -325,6 +329,7 @@
   position: relative;
   overflow: hidden;
   transition: all 0.2s ease;
+  width: 100%;
 }
 .work-wrap .work-content .work-cards .driver:hover {
   box-shadow: 5px 5px 10px black;
@@ -351,6 +356,7 @@
   overflow: hidden;
   position: relative;
   transition: all 0.2s ease;
+  width: 100%;
 }
 .work-wrap .work-content .work-cards .operator:hover {
   box-shadow: 5px 5px 10px black;
@@ -563,7 +569,7 @@
   margin-bottom: 7rem;
   background-size: cover;
 }
-@media (max-width: 426px) {
+@media (max-width: 768px) {
   .testimonials-wrap .testimonials-background {
     flex-direction: column;
     height: auto;
@@ -596,7 +602,7 @@
   height: 100%;
   padding: 0 3.5rem 3.5rem 3.5rem;
 }
-@media (max-width: 426px) {
+@media (max-width: 768px) {
   .testimonials-wrap .testimonials-background .testimonials-list {
     width: 100%;
     max-width: none;
