--- a/resources/sass/pages/homepage/work.scss
+++ b/resources/sass/pages/homepage/work.scss
@@ -27,7 +27,10 @@
             align-items: center;
             height: 60vh;
             margin-top: 6rem;
-            flex-direction: column;
+
+            @include tablet() {
+                flex-direction: column;
+            }
 
             .work-card {
                 flex: 0 1 calc(50% - 1rem);
@@ -59,6 +62,7 @@
                 position: relative;
                 overflow: hidden;
                 transition: all 0.2s ease;
+                width: 100%;
 
                 &:hover {
                     box-shadow: 5px 5px 10px black;
@@ -89,6 +93,7 @@
                 overflow: hidden;
                 position: relative;
                 transition: all 0.2s ease;
+                width: 100%;
 
                 &:hover {
                     box-shadow: 5px 5px 10px black;
