--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -189,6 +189,10 @@ html {
     text-transform: uppercase;
     font-size: 1rem;
     font-weight: bold;
+
+    @include mobile() {
+        font-size: 0.7rem;         
+    }
 }
 
 .underline {
