--- a/resources/sass/pages/homepage/work.scss
+++ b/resources/sass/pages/homepage/work.scss
@@ -6,6 +6,10 @@
         margin: 0 auto;
         height: 105vh;
 
+        @include mobile(){
+            height: auto;
+        }
+
         .work-overtitle {
             color: $dark-black;
             font-size: 1.2rem;
@@ -32,10 +36,14 @@
                 flex-direction: column;
             }
 
+            @include mobile() {
+                height: 85vh;
+            }
+
             .work-card {
                 flex: 0 1 calc(50% - 1rem);
                 height: 100%;
-                padding: 3.5rem;
+                padding: 1.3rem;
                 display: flex;
                 flex-direction: column;
                 justify-content: flex-end;
@@ -49,6 +57,10 @@
                     z-index: 10;
                     text-shadow: 0 0 8px black;
                     font-size: 2.6rem;
+
+                    @include mobile() {
+                        font-size: 1.7rem;
+                    }
                 }
 
                 .card-text {
