--- a/public/css/main.css
+++ b/public/css/main.css
@@ -172,53 +172,6 @@
   }
 }
 
-.banner {
-  position: absolute;
-  top: 95vh;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  height: 25vh;
-  width: 75vw;
-  background: #0f0f0f;
-  box-shadow: 0px 0px 23px 0px #0f0f0f;
-  z-index: 999;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.banner .banner-single {
-  flex: 0 1 25%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  box-shadow: 0px 0px 18px 6px #0f0f0f;
-}
-
-.banner-single:nth-child(1) {
-  background: url("http://hn.arrowpress.net/barber/wp-content/uploads/2017/03/h6_bannerimg3.jpg");
-  background-size: cover;
-}
-
-.banner-single:nth-child(2) {
-  background: url("http://hn.arrowpress.net/barber/wp-content/uploads/2017/03/h6_bannerimg5.jpg");
-  background-size: cover;
-}
-
-.banner-single:nth-child(3) {
-  background: url("http://hn.arrowpress.net/barber/wp-content/uploads/2017/03/h6_bannerimg3.jpg");
-  background-size: cover;
-}
-
-.banner-single:nth-child(4) {
-  background: url("http://hn.arrowpress.net/barber/wp-content/uploads/2017/03/h6_bannerimg5.jpg");
-  background-size: cover;
-}
-
 .services-wrap {
   width: 100%;
   height: 55vh;
@@ -1283,6 +1236,236 @@
   background: transparent;
 }
 
+.header-contact {
+  position: relative;
+}
+.header-contact .navigation-list {
+  text-shadow: 0px 0px 5px #0f0f0f;
+  width: 70vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style-type: none;
+  height: 20vh;
+  margin: 0 auto;
+  color: #efefef;
+}
+.header-contact .navigation-list .navigation-item {
+  font-size: 1.2rem;
+}
+.header-contact .navigation-list .navigation-item a {
+  text-decoration: none;
+}
+.header-contact .navigation-list .navigation-item .navigation-item-logo {
+  width: 200px;
+  filter: invert(100%);
+}
+@media (max-width: 426px) {
+  .header-contact .navigation-list {
+    display: none;
+  }
+}
+.header-contact .navigation-mobile {
+  display: none;
+}
+@media (max-width: 426px) {
+  .header-contact .navigation-mobile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.5rem;
+    position: fixed;
+    width: 100vw;
+    z-index: 9999;
+  }
+  .header-contact .navigation-mobile .navigation-mobile-logo {
+    width: 100px;
+    filter: invert(100%);
+  }
+  .header-contact .navigation-mobile .navigation-hamburger {
+    font-size: 2rem;
+  }
+}
+.header-contact .navigation-mobile-list {
+  display: none;
+}
+@media (max-width: 426px) {
+  .header-contact .navigation-mobile-list {
+    background: red;
+    position: absolute;
+    width: 100%;
+    height: 0;
+    padding: 1.5rem;
+    list-style-type: none;
+    font-size: 1.1rem;
+    z-index: 999;
+    transition: all 0.3s linear;
+  }
+}
+@-webkit-keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+.header-contact .banner-contact {
+  margin: 0 auto;
+  max-width: 70vw;
+  height: 25vh;
+  background: transparent;
+  z-index: 999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 8rem;
+}
+.header-contact .banner-contact .banner-single {
+  flex: 0 1 calc(25% - 0.5rem);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  -webkit-animation: gradient 4s ease infinite;
+          animation: gradient 4s ease infinite;
+  box-shadow: 0 0 6px 0px #28acc2;
+  padding: 0 3rem;
+}
+.header-contact .banner-contact .banner-single .banner-single-title {
+  margin: 0.6rem 0;
+}
+.header-contact .banner-contact .banner-single .banner-single-text {
+  text-align: center;
+}
+.header-contact .banner-contact .banner-single::after {
+  content: "";
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  top: 10px;
+  bottom: 10px;
+  border: 2px solid #ffffff5d;
+}
+.header-contact .banner-single:nth-child(1) {
+  background: linear-gradient(-45deg, #92f4ff, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  -webkit-animation: gradient 4s ease infinite;
+          animation: gradient 4s ease infinite;
+}
+.header-contact .banner-single:nth-child(2) {
+  background: linear-gradient(30deg, #53d3d1, #2eacda, #23d5ab);
+  background-size: 400% 400%;
+  -webkit-animation: gradient 4s ease infinite;
+          animation: gradient 4s ease infinite;
+}
+.header-contact .banner-single:nth-child(3) {
+  background: linear-gradient(183deg, #23d5ab, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  -webkit-animation: gradient 4s ease infinite;
+          animation: gradient 4s ease infinite;
+}
+.header-contact .banner-single:nth-child(4) {
+  background: linear-gradient(301deg, #92f4ff, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  -webkit-animation: gradient 4s ease infinite;
+          animation: gradient 4s ease infinite;
+}
+.header-contact .contact-overtitle {
+  color: #545454;
+  font-size: 1.2rem;
+  display: block;
+  text-align: center;
+}
+.header-contact .contact-title {
+  color: #efefef;
+  font-family: "Bebas Neue", cursive;
+  text-align: center;
+  padding-top: 8rem;
+  font-size: 5rem;
+}
+
+.contact-content-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 72vh;
+  padding: 5rem 0;
+  margin: 0 auto;
+  max-width: 70vw;
+}
+.contact-content-wrap .contact-map {
+  flex: 0 1 calc(65% - 1rem);
+  height: 100%;
+}
+.contact-content-wrap .contact-form {
+  height: 100%;
+  background: #fcfcfc29;
+  flex: 0 1 calc(35% - 1rem);
+  padding: 3rem;
+}
+.contact-content-wrap .contact-form .input-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.contact-content-wrap .contact-form .input-form label {
+  padding: 0.4rem 0;
+  color: #21546e;
+  font-size: 1.25rem;
+  font-family: "Bebas Neue", cursive;
+}
+.contact-content-wrap .contact-form .input-form input[type] {
+  height: 2.1rem;
+  border: none;
+  padding: 0.7rem;
+  color: #21546e;
+}
+.contact-content-wrap .contact-form .input-form input[type]:focus {
+  outline: #f06037;
+}
+.contact-content-wrap .contact-form .input-form ::-moz-placeholder {
+  color: #21546e41;
+  font-family: "Bebas Neue", cursive;
+  letter-spacing: 0.1rem;
+}
+.contact-content-wrap .contact-form .input-form :-ms-input-placeholder {
+  color: #21546e41;
+  font-family: "Bebas Neue", cursive;
+  letter-spacing: 0.1rem;
+}
+.contact-content-wrap .contact-form .input-form ::placeholder {
+  color: #21546e41;
+  font-family: "Bebas Neue", cursive;
+  letter-spacing: 0.1rem;
+}
+.contact-content-wrap .contact-form .input-form textarea {
+  height: auto;
+  color: #21546e;
+  padding: 0.7rem;
+  border: none;
+}
+.contact-content-wrap .contact-form .input-form textarea:focus {
+  outline: #f06037;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -1350,7 +1533,7 @@ html {
     font-size: 12px;
   }
 }
-#map {
+.contact-map {
   width: 100%;
   height: 65vh;
 }
@@ -1461,4 +1644,9 @@ html {
 
 .center {
   margin: 0 auto;
+}
+
+.gradient-background {
+  background-color: #0093E9;
+  background-image: linear-gradient(90deg, #0093E9 0%, #80D0C7 89%);
 }
