--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1048,10 +1048,10 @@
   height: 60vh;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 100% 80%, 50% 90%, 0 80%, 0 0);
   clip-path: polygon(0 0, 100% 0, 100% 0, 100% 85%, 50% 95%, 0 85%, 0 0);
-  background-image: linear-gradient(to right bottom, rgba(36, 36, 36, 0.9), rgba(0, 0, 0, 0.17)), url("/assets/images/services1.jpg");
+  background-image: linear-gradient(to right bottom, rgba(30, 87, 99, 0.37), rgba(255, 255, 255, 0.17)), url(/assets/images/night-road.jpg);
   background-size: cover;
   display: flex;
-  background-position: 100% 38%;
+  background-position: 100% 80%;
   flex-direction: column;
   align-items: center;
 }
@@ -1120,83 +1120,137 @@
 }
 .header-services .services-title {
   margin-top: 5rem;
-  font-size: 2.2rem;
+  font-size: 4rem;
+  font-family: "Bebas Neue", cursive;
   text-shadow: 0px 0px 5px #0f0f0f;
 }
 
+@-webkit-keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 .services-content-wrap .services-content {
   max-width: 70vw;
   margin: 0 auto;
 }
-.services-content-wrap .services-content .services-overtitle {
-  color: #337a94;
-  font-size: 1.2rem;
-  display: block;
-  padding-top: 3rem;
-  text-align: center;
-}
-.services-content-wrap .services-content .services-title {
-  color: #efefef;
-  font-family: "Bebas Neue", cursive;
-  line-height: 3.5rem;
-  text-align: center;
-  font-size: 5rem;
-  text-shadow: 0px 0px 10px #0f0f0f;
-}
-.services-content-wrap .services-content .services-title-advice {
-  color: #efefef;
-  font-family: "Bebas Neue", cursive;
-  line-height: 3.5rem;
-  text-align: center;
-  font-size: 5rem;
-  margin-top: 9rem;
-  text-shadow: 0px 0px 10px #0f0f0f;
-}
 .services-content-wrap .services-content .services-text {
   margin-top: 2rem;
   text-align: center;
+  color: #21546e;
+  padding: 2rem 0;
 }
-.services-content-wrap .services-content .process-wrap {
+.services-content-wrap .services-content .services-wrap-container {
   margin-top: 3rem;
 }
-.services-content-wrap .services-content .process-wrap .process-overtitle {
+.services-content-wrap .services-content .services-wrap-container .services-overtitle {
   color: #337a94;
-  font-size: 1rem;
+  font-size: 1.2rem;
   display: block;
-  padding-top: 3rem;
   text-align: center;
 }
-.services-content-wrap .services-content .process-wrap .process-title {
-  color: #efefef;
+.services-content-wrap .services-content .services-wrap-container .services-title {
+  color: #337a94;
   font-family: "Bebas Neue", cursive;
-  line-height: 3.2rem;
+  line-height: 3.5rem;
   text-align: center;
-  font-size: 4rem;
-  text-shadow: 0px 0px 10px #0f0f0f;
+  font-size: 5rem;
+  text-shadow: 0px 0px 10px #efefef;
 }
-.services-content-wrap .services-content .process-wrap .process-container {
+.services-content-wrap .services-content .services-wrap-container .services-container {
   margin-top: 2rem;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
-.services-content-wrap .services-content .process-wrap .process-container .process-single {
+.services-content-wrap .services-content .services-wrap-container .services-container .services-single {
   flex: 0 1 calc(33% - 1rem);
-  background: #27272778;
+  background: #337a94;
   padding: 2rem;
   position: relative;
   border-radius: 2px;
   text-align: center;
   margin-top: 1rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  -webkit-animation: gradient 4s ease infinite;
+          animation: gradient 4s ease infinite;
 }
 @media (max-width: 768px) {
-  .services-content-wrap .services-content .process-wrap .process-container .process-single {
+  .services-content-wrap .services-content .services-wrap-container .services-container .services-single {
     flex: 0 1 calc(50% - 1rem);
   }
 }
-.services-content-wrap .services-content .process-wrap .process-container .process-single .process-single-icon {
+.services-content-wrap .services-content .services-wrap-container .services-container .services-single .services-single-icon {
   width: 100px;
   filter: drop-shadow(0px 0px 3px #0f0f0f) saturate(0.9);
+}
+.services-content-wrap .services-content .services-wrap-container .services-container .services-single .services-single-title {
+  margin: 0.8rem 0;
+}
+.services-content-wrap .services-content .services-wrap-container .services-container .services-single::after {
+  content: "";
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  top: 10px;
+  bottom: 10px;
+  border: 2px solid #ffffff5d;
+}
+.services-content-wrap .services-content .services-wrap-container .services-container .services-single:nth-child(1) {
+  background: linear-gradient(30deg, #53d3d1, #2eacda, #23d5ab);
+  background-size: 400% 400%;
+  -webkit-animation: gradient 2.5s ease infinite;
+          animation: gradient 2.5s ease infinite;
+}
+.services-content-wrap .services-content .services-wrap-container .services-container .services-single:nth-child(2) {
+  background: linear-gradient(30deg, #53d3d1, #2eacda, #23d5ab);
+  background-size: 400% 400%;
+  -webkit-animation: gradient 5s ease infinite;
+          animation: gradient 5s ease infinite;
+}
+.services-content-wrap .services-content .services-wrap-container .services-container .services-single:nth-child(3) {
+  background: linear-gradient(183deg, #23d5ab, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  -webkit-animation: gradient 3s ease infinite;
+          animation: gradient 3s ease infinite;
+}
+.services-content-wrap .services-content .services-wrap-container .services-container .services-single:nth-child(4) {
+  background: linear-gradient(301deg, #92f4ff, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  -webkit-animation: gradient 7s ease infinite;
+          animation: gradient 7s ease infinite;
+}
+.services-content-wrap .services-content .services-wrap-container .services-container .services-single:nth-child(5) {
+  background: linear-gradient(183deg, #23d5ab, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  -webkit-animation: gradient 3s ease infinite;
+          animation: gradient 3s ease infinite;
+}
+.services-content-wrap .services-content .services-wrap-container .services-container .services-single:nth-child(6) {
+  background: linear-gradient(301deg, #92f4ff, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  -webkit-animation: gradient 4s ease infinite;
+          animation: gradient 4s ease infinite;
 }
 .services-content-wrap .services-content .documents {
   display: flex;
@@ -1302,17 +1356,6 @@
     transition: all 0.3s linear;
   }
 }
-@-webkit-keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
 @keyframes gradient {
   0% {
     background-position: 0% 50%;
@@ -1327,7 +1370,7 @@
 .header-contact .banner-contact {
   margin: 0 auto;
   max-width: 70vw;
-  height: 25vh;
+  height: 100%;
   background: transparent;
   z-index: 999;
   display: flex;
@@ -1338,15 +1381,27 @@
 }
 .header-contact .banner-contact .banner-single {
   flex: 0 1 calc(25% - 0.5rem);
-  height: 100%;
+  height: 25vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
   -webkit-animation: gradient 4s ease infinite;
           animation: gradient 4s ease infinite;
   box-shadow: 0 0 6px 0px #28acc2;
   padding: 0 3rem;
+}
+@media (max-width: 1024px) {
+  .header-contact .banner-contact .banner-single {
+    flex: 0 1 calc(50% - 1rem);
+  }
+}
+@media (max-width: 426px) {
+  .header-contact .banner-contact .banner-single {
+    flex: 0 1 100%;
+    margin-top: 1rem;
+  }
 }
 .header-contact .banner-contact .banner-single .banner-single-title {
   margin: 0.6rem 0;
@@ -1410,15 +1465,32 @@
   margin: 0 auto;
   max-width: 70vw;
 }
+@media (max-width: 768px) {
+  .contact-content-wrap {
+    display: block;
+    height: auto;
+  }
+}
 .contact-content-wrap .contact-map {
   flex: 0 1 calc(65% - 1rem);
   height: 100%;
+}
+@media (max-width: 768px) {
+  .contact-content-wrap .contact-map {
+    height: 50vh;
+    width: 100%;
+  }
 }
 .contact-content-wrap .contact-form {
   height: 100%;
   background: #fcfcfc29;
   flex: 0 1 calc(35% - 1rem);
   padding: 3rem;
+}
+@media (max-width: 768px) {
+  .contact-content-wrap .contact-form {
+    margin-top: 2.5rem;
+  }
 }
 .contact-content-wrap .contact-form .input-form {
   display: flex;
