--- a/resources/sass/pages/contact/header.scss
+++ b/resources/sass/pages/contact/header.scss
@@ -18,7 +18,7 @@
 
     .banner-contact {
         @include center-content();
-        height: 25vh;
+        height: 100%;
         background: transparent;
         z-index: 999;
         display: flex;
@@ -29,14 +29,24 @@
 
         .banner-single {
             flex: 0 1 calc(25% - 0.5rem);
-            height: 100%;
+            height: 25vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            width: 100%;
             animation: gradient 4s ease infinite;
             box-shadow: 0 0 6px 0px #28acc2;
             padding: 0 3rem;
+
+            @include laptop() {
+                flex: 0 1 calc(50% - 1rem);
+            }
+            
+            @include mobile() {
+                flex: 0 1 100%;
+                margin-top: 1rem;
+            }
 
             .banner-single-title {
                 margin: 0.6rem 0;
