--- a/resources/sass/pages/services/content.scss
+++ b/resources/sass/pages/services/content.scss
@@ -1,84 +1,128 @@
 .services-content-wrap {
 
+    @keyframes gradient {
+        0% {
+            background-position: 0% 50%;
+        }
+
+        50% {
+            background-position: 100% 50%;
+        }
+
+        100% {
+            background-position: 0% 50%;
+        }
+    }
+
     .services-content {
         max-width: 70vw;
         margin: 0 auto;
-
-        .services-overtitle {
-            color: $blue;
-            font-size: 1.2rem;
-            display: block;
-            padding-top: 3rem;
-            text-align: center;
-        }
-
-        .services-title {
-            color: $text-white;
-            font-family: $styled-text;
-            line-height: 3.5rem;
-            text-align: center;
-            font-size: 5rem;
-            text-shadow: 0px 0px 10px $dark-black;
-        }
-
-        .services-title-advice {
-            color: $text-white;
-            font-family: $styled-text;
-            line-height: 3.5rem;
-            text-align: center;
-            font-size: 5rem;
-            margin-top: 9rem;
-            text-shadow: 0px 0px 10px $dark-black;
-        }
-
+        
         .services-text {
             margin-top: 2rem;
             text-align: center;
+            color: $darkBlue;
+            padding: 2rem 0;
         }
 
-        .process-wrap {
+        .services-wrap-container {
             margin-top: 3rem;
 
-            .process-overtitle {
+            .services-overtitle {
                 color: $blue;
-                font-size: 1rem;
+                font-size: 1.2rem;
                 display: block;
-                padding-top: 3rem;
                 text-align: center;
             }
 
-            .process-title {
-                color: $text-white;
+            .services-title {
+                color: $blue;
                 font-family: $styled-text;
-                line-height: 3.2rem;
+                line-height: 3.5rem;
                 text-align: center;
-                font-size: 4rem;
-                text-shadow: 0px 0px 10px $dark-black;
+                font-size: 5rem;
+                text-shadow: 0px 0px 10px $text-white;
             }
 
-            .process-container {
+            .services-container {
                 margin-top: 2rem;
                 display: flex;
                 justify-content: space-between;
                 flex-wrap: wrap;
 
-                .process-single {
+                .services-single {
                     flex: 0 1 calc(33% - 1rem);
-                    background: #27272778;
+                    background: $blue;
                     padding: 2rem;
                     position: relative;
                     border-radius: 2px;
                     text-align: center;
                     margin-top: 1rem;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    animation: gradient 4s ease infinite;
 
                     @include tablet {
                         flex: 0 1 calc(50% - 1rem);
                     }
 
-                    .process-single-icon {
+                    .services-single-icon {
                         width: 100px;
                         filter: drop-shadow(0px 0px 3px $dark-black) saturate(0.9);
                     }
+
+                    .services-single-title {
+                        margin: 0.8rem 0;
+                    }
+
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        left: 10px;
+                        right: 10px;
+                        top: 10px;
+                        bottom: 10px;
+                        border: 2px solid #ffffff5d;
+                    }
+
+                    
+                }
+
+                .services-single:nth-child(1) {
+                    background: linear-gradient(30deg, #53d3d1, #2eacda, #23d5ab);
+                    background-size: 400% 400%;
+                    animation: gradient 2.5s ease infinite;
+                }
+
+                .services-single:nth-child(2) {
+                    background: linear-gradient(30deg, #53d3d1, #2eacda, #23d5ab);
+                    background-size: 400% 400%;
+                    animation: gradient 5s ease infinite;
+                }
+
+                .services-single:nth-child(3) {
+                    background: linear-gradient(183deg, #23d5ab, #23a6d5, #23d5ab);
+                    background-size: 400% 400%;
+                    animation: gradient 3s ease infinite;
+                }
+
+                .services-single:nth-child(4) {
+                    background: linear-gradient(301deg, #92f4ff, #23a6d5, #23d5ab);
+                    background-size: 400% 400%;
+                    animation: gradient 7s ease infinite;
+                }
+
+                .services-single:nth-child(5) {
+                    background: linear-gradient(183deg, #23d5ab, #23a6d5, #23d5ab);
+                    background-size: 400% 400%;
+                    animation: gradient 3s ease infinite;
+                }
+
+                .services-single:nth-child(6) {
+                    background: linear-gradient(301deg, #92f4ff, #23a6d5, #23d5ab);
+                    background-size: 400% 400%;
+                    animation: gradient 4s ease infinite;
                 }
             }
         }
