--- a/resources/sass/pages/services/header.scss
+++ b/resources/sass/pages/services/header.scss
@@ -2,10 +2,11 @@
     height: 60vh;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 100% 80%, 50% 90%, 0 80%, 0 0);
     clip-path: polygon(0 0, 100% 0, 100% 0, 100% 85%, 50% 95%, 0 85%, 0 0);
-    background-image: linear-gradient(to right bottom, rgba(36, 36, 36, 0.9), rgba(0, 0, 0, 0.17)), url('/assets/images/services1.jpg');
+    background-image: linear-gradient(to right bottom, rgb(30 87 99 / 37%), rgba(255, 255, 255, 0.17)),
+    url(/assets/images/night-road.jpg);
     background-size: cover;
     display: flex;
-    background-position: 100% 38%;
+    background-position: 100% 80%;
     flex-direction: column;
     align-items: center;
 
@@ -13,7 +14,8 @@
 
     .services-title {
         margin-top: 5rem;
-        font-size: 2.2rem;
+        font-size: 4rem;
+        font-family: $styled-text;
         @include text-shadow();
     }
 }
