--- a/resources/sass/pages/contact/header.scss
+++ b/resources/sass/pages/contact/header.scss
@@ -42,7 +42,7 @@
             @include laptop() {
                 flex: 0 1 calc(50% - 1rem);
             }
-            
+
             @include mobile() {
                 flex: 0 1 100%;
                 margin-top: 1rem;
@@ -69,26 +69,26 @@
     }
 
     .banner-single:nth-child(1) {
-        background: linear-gradient(-45deg, #92f4ff, #23a6d5, #23d5ab);
+        background: linear-gradient(30deg, #33a2a1, #238eb5, #129475);
         background-size: 400% 400%;
         animation: gradient 5s ease infinite;
 
     }
 
     .banner-single:nth-child(2) {
-        background: linear-gradient(30deg, #53d3d1, #2eacda, #23d5ab);
+        background: linear-gradient(30deg, #33a2a1, #238eb5, #129475);
         background-size: 400% 400%;
         animation: gradient 2s ease infinite;
     }
 
     .banner-single:nth-child(3) {
-        background: linear-gradient(183deg, #23d5ab, #23a6d5, #23d5ab);
+        background: linear-gradient(30deg, #33a2a1, #238eb5, #129475);
         background-size: 400% 400%;
         animation: gradient 7s ease infinite;
     }
 
     .banner-single:nth-child(4) {
-        background: linear-gradient(301deg, #92f4ff, #23a6d5, #23d5ab);
+        background: linear-gradient(30deg, #33a2a1, #238eb5, #129475);
         background-size: 400% 400%;
         animation: gradient 3s ease infinite;
     }
