--- a/resources/sass/pages/services/content.scss
+++ b/resources/sass/pages/services/content.scss
@@ -17,19 +17,22 @@
     .services-content {
         max-width: 70vw;
         margin: 0 auto;
-        
+
         .services-text {
-            margin-top: 2rem;
+            margin-top: 8rem;
             text-align: center;
             color: $darkBlue;
+            margin: 0 auto;
+            max-width: 50vw;
             padding: 2rem 0;
+            font-size: 1.15rem;
         }
 
         .services-wrap-container {
             margin-top: 3rem;
 
             .services-overtitle {
-                color: $blue;
+                color: $dark-black;
                 font-size: 1.2rem;
                 display: block;
                 text-align: center;
@@ -86,85 +89,112 @@
                         border: 2px solid #ffffff5d;
                     }
 
-                    
+
                 }
 
                 .services-single:nth-child(1) {
-                    background: linear-gradient(30deg, #53d3d1, #2eacda, #23d5ab);
+                    background: linear-gradient(30deg, #33a2a1, #238eb5, #129475);
                     background-size: 400% 400%;
                     animation: gradient 2.5s ease infinite;
                 }
 
                 .services-single:nth-child(2) {
-                    background: linear-gradient(30deg, #53d3d1, #2eacda, #23d5ab);
+                    background: linear-gradient(30deg, #33a2a1, #238eb5, #129475);
                     background-size: 400% 400%;
                     animation: gradient 5s ease infinite;
                 }
 
                 .services-single:nth-child(3) {
-                    background: linear-gradient(183deg, #23d5ab, #23a6d5, #23d5ab);
+                    background: linear-gradient(30deg, #33a2a1, #238eb5, #129475);
                     background-size: 400% 400%;
                     animation: gradient 3s ease infinite;
                 }
 
                 .services-single:nth-child(4) {
-                    background: linear-gradient(301deg, #92f4ff, #23a6d5, #23d5ab);
+                    background: linear-gradient(30deg, #33a2a1, #238eb5, #129475);
                     background-size: 400% 400%;
                     animation: gradient 7s ease infinite;
                 }
 
                 .services-single:nth-child(5) {
-                    background: linear-gradient(183deg, #23d5ab, #23a6d5, #23d5ab);
+                    background: linear-gradient(30deg, #33a2a1, #238eb5, #129475);
                     background-size: 400% 400%;
                     animation: gradient 3s ease infinite;
                 }
 
                 .services-single:nth-child(6) {
-                    background: linear-gradient(301deg, #92f4ff, #23a6d5, #23d5ab);
+                    background: linear-gradient(30deg, #33a2a1, #238eb5, #129475);
                     background-size: 400% 400%;
                     animation: gradient 4s ease infinite;
                 }
             }
         }
 
-        .documents {
+        .services-subheading {
+            color: $dark-black;
+            font-size: 1.2rem;
+            display: block;
+            text-align: center;
+        }
+
+        .services-heading {
+            color: $blue;
+            font-family: $styled-text;
+            line-height: 3.5rem;
+            text-align: center;
+            font-size: 5rem;
+            margin-top: 7rem;
+            text-shadow: 0px 0px 10px $text-white;
+        }
+    }
+    .cta-careers-wrap {
+        width: 100%;
+        height: 55vh;
+        background: linear-gradient(55deg, rgba(255, 255, 255, 0.94) 46%, rgba(12, 95, 99, 0.58) 100%),
+            url('/assets/images/wheel.jpg');
+        background-position: 85% 72%;
+        background-size: cover;
+        margin-top: 7rem;
+
+        .cta-careers {
+            @include center-content();
+            margin: 0 auto;
+            flex: 0 1 50%;
             display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            flex-wrap: wrap;
-            margin-top: 2rem;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            height: 100%;
 
-            .single-document {
-                display: flex;
-                align-items: center;
-                padding: 0.9rem 1.1rem;
-                justify-content: space-between;
-                width: 360px;
-                border: 1px solid white;
-                border-radius: 4px;
-                background: transparent;
+            .btn-transparent {
+                border: 0.15rem solid $blue;
+                color: $blue;
 
-                @include laptop {
-                    margin-top: 0.5rem;
+                &:hover {
+                    background: $blue;
+
+                    span {
+                        color: $dark-black;
+                    }
+                }
+
+                .btn-text {
+                    color: $blue;
                 }
             }
-        }
 
-        .legal-age {
-            margin-top: 4rem;
-        }
+            .cta-careers-text {
+                margin-bottom: 2rem;
+                color: $dark-black;
+            }
 
-        .legal-age-button {
-            display: flex;
-            align-items: center;
-            padding: 0.9rem 1.1rem;
-            justify-content: space-between;
-            width: 290px;
-            margin: 0 auto;
-            margin-top: 2.5rem;
-            border: 1px solid white;
-            border-radius: 4px;
-            background: transparent;
+            .cta-careers-title {
+                color: $text-white;
+                font-family: $styled-text;
+                text-align: center;
+                color: $blue;
+                font-size: 5.5rem;
+            }
         }
     }
 }
