--- a/resources/sass/pages/careers/header.scss
+++ b/resources/sass/pages/careers/header.scss
@@ -2,7 +2,7 @@
     height: 60vh;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 100% 80%, 50% 90%, 0 80%, 0 0);
     clip-path: polygon(0 0, 100% 0, 100% 0, 100% 85%, 50% 95%, 0 85%, 0 0);
-    background-image: linear-gradient(to right bottom, rgba(36, 36, 36, 0.9), rgba(0, 0, 0, 0.17)), url('/assets/images/slider1.jpg');
+    background-image: linear-gradient(to right bottom, rgba(36, 36, 36, 0.9), rgba(0, 0, 0, 0.17)), url('/assets/images/garage.jpg');
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -12,7 +12,8 @@
     
     .careers-title {
         margin-top: 5rem;
-        font-size: 2.2rem;
+        font-size: 4rem;
+        font-family: $styled-text;
         @include text-shadow();
     }
 }
